# coderef

./: .gitignore  README.md  README.md.backup  pyproject.toml  requirements.txt
docs/core/: ARCHITECTURE.md  PRD.md  STANDARDS.md
docs/logs/: 2025-12-31-story-001.md  2025-12-31-story-002.md  2025-12-31-story-003.md  2025-12-31-story-004.md  2025-12-31-story-005.md  2025-12-31-story-006.md  2025-12-31-story-007.md  2025-12-31-story-008.md  2026-01-09-agent-rewrite.md
docs/reference/completed/: 001-initial-cli.md  002-api-client.md  003-cli-integration.md  004-env-var-support.md  005-api-key-format-fix.md  006-env-var-diagnostics.md  007-env-var-runtime.md  008-library-detection-fix.md  009-agent-rewrite.md
src/coderef/: __init__.py  agent.py  api_client.py  config.py  library_resolver.py  main.py  output.py  utils.py
tests/: __init__.py  test_agent.py  test_api_client.py  test_api_client.py.bak  test_config.py  test_library_resolver.py
